--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,9 @@ h1 {
     padding: 10px;
     margin-bottom: 10px;
     text-align: center;
+    font-size: 20px;
+    font-weight:lighter;
+    letter-spacing: 1px;
 }
 
 .profile img {
