--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@ h1 {
     margin-top: 20px;
     width: 100%;
     font-family: 'Lato', sans-serif;
-    font-size: 48px; 
+    font-size: 48px;
     font-weight: 700;
     letter-spacing: 6px;
-    color: #0e0a0bd8; 
+    color: #0e0a0bd8;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -27,19 +27,19 @@ h1 {
     align-items: center;
     flex-wrap: wrap;
     gap: 30px;
-    margin: 20px; 
+    margin: 20px;
 }
 
-/* buttons */
+
 .btn {
-    background-color: #dfa71bcc; 
+    background-color: #dfa71bcc;
     color: white;
     letter-spacing: 2px;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
     margin: 10px;
-    border-radius: 5px; 
+    border-radius: 5px;
 }
 
 .btn:hover{
@@ -65,3 +65,62 @@ h1 {
 profile p {
     margin-top: 10px;
 }
+
+.liked-profile {
+    width: 10%;
+}
+
+.liked-profile-container {
+    display: flex;
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+  }
+
+
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #dfa71bcc;
+    color: white;
+  }
+
+  .profile-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5px;
+  }
